--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tech-doc-hugo",
+  "name": "support-how-to",
   "version": "0.0.1",
   "description": "Hugo theme for technical documentation.",
   "main": "none.js",
@@ -8,14 +8,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bep/tech-doc-hugo.git"
+    "url": "git+https://github.com/rackerlabs/support-how-to.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/bep/tech-doc-hugo/issues"
+    "url": "https://github.com/rackerlabs/support-how-to/issues"
   },
-  "homepage": "https://github.com/bep/tech-doc-hugo#readme",
+  "homepage": "https://github.com/rackerlabs/support-how-to#readme",
   "dependencies": {},
   "devDependencies": {
     "autoprefixer": "^9.5.0",
