--- a/config.toml
+++ b/config.toml
@@ -71,20 +71,36 @@ time_format_blog = "02.01.2006"
     [markup.goldmark.renderer]
       unsafe = true
   [markup.highlight]
+      # See a complete list of available styles at https://xyproto.github.io/splash/docs/all.html
       style = "tango"
+      # Uncomment if you want your chosen highlight style used for code blocks without a specified language
+      # guessSyntax = "true"
 
+# Everything below this are Site Params
+
+
+# First one is picked as the Twitter card image if not set on page.
+# images = ["images/project-illustration.png"]
+
+# Menu title if your navbar has a versions selector to access old versions of your site.
+# This menu appears only if you have at least one [params.versions] set.
 version_menu = "Releases"
 
-
+# Flag used in the "version-banner" partial to decide whether to display a 
+# banner on every page indicating that this is an archived version of the docs.
+# Set this flag to "true" if you want to display the banner.
 archived_version = false
 
-
+# The version number for the version of the docs represented in this doc set.
+# Used in the "version-banner" partial to display a version number for the 
+# current doc set.
 version = "0.0"
 
-
+# A link to latest version of the docs. Used in the "version-banner" partial to
+# point people to the main doc site.
 url_latest_version = "https://example.com"
 
-
+# Repository configuration (URLs for in-page links to opening issues and suggesting changes)
 github_repo = "https://github.com/rackerlabs/support-how-to"
 # An optional link to a related project repo. For example, the sibling repository where your product code lives.
 github_project_repo = "https://github.com/rackerlabs/support-developer-hugo-theme"
@@ -150,7 +166,7 @@ enable = false
 # Developer relevant links. These will show up on right side of footer and in the community page if you have one.
 [[params.links.developer]]
 	name = "GitHub"
-	url = "https://github.com/rackerlabs/support-developer-hugo-theme"
+	url = "https://github.com/rackerlabs/support-how-to"
 	icon = "fab fa-github"
         desc = "Development takes place here!"
 [[params.links.developer]]
