--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ uglyURLs = false
 smartDashes = true
 title = "Rackspace Developer Center"
 # Google Custom Search Engine ID
-gcs_engine_id = "006650721361932583448:0tpp1tnttba"
+# gcs_engine_id = "006650721361932583448:0tpp1tnttba"
 # Enable offline search with Lunr.js
 offlineSearch = true
 offlineSearchSummaryLength = 70
