--- a/config.toml
+++ b/config.toml
@@ -208,13 +208,21 @@ baseName = "opensearch"
 isPlainText = true
 mediaType = "application/xml"
 
+[outputFormats.Algolia]
+baseName = "algolia"
+isPlainText = true
+mediaType = "application/json"
+notAlternative = true
+
 [outputFormats.Redirects]
 baseName = "redirects"
 isPlainText = true
 mediatype = "application/json"
 notAlternative = true
+
 [outputs]
-home = ["HTML", "RSS", "OpenSearch", "Redirects"]
+home = ["HTML", "RSS", "OpenSearch", "Algolia", "Redirects"]
+
 [params]
 dateformat = "January 2, 2006"
 description = "Rackspace Developer documentation using static site generator and headless CMS"
@@ -222,6 +230,9 @@ ghrepo = "https://github.com/rackerlabs/support-how-to"
 ghrepo_edit = "https://github.com/rackerlabs/support-how-to/edit/master/hugo/content/"
 ghrepo_new = "https://github.com/rackerlabs/support-how-to/issues/new"
 images = ["/img"]
+[params.algolia]
+params = ["tags", "categories", "authors"]
+vars = ["date", "description", "dir", "path", "expirydate", "fuzzywordcount", "keywords", "kind", "lang", "lastmod", "permalink", "publishdate", "readingtime", "relpermalink", "summary", "title", "type", "url", "weight", "wordcount", "section"]
 [related]
 includeNewer = true
 threshold = 10
