--- a/config.toml
+++ b/config.toml
@@ -208,11 +208,6 @@ baseName = "opensearch"
 isPlainText = true
 mediaType = "application/xml"
 
-[outputFormats.Algolia]
-baseName = "algolia"
-isPlainText = true
-mediaType = "application/json"
-notAlternative = true
 
 [outputFormats.Redirects]
 baseName = "redirects"
@@ -221,7 +216,7 @@ mediatype = "application/json"
 notAlternative = true
 
 [outputs]
-home = ["HTML", "RSS", "OpenSearch", "Algolia", "Redirects"]
+home = ["HTML", "RSS", "OpenSearch", "Redirects"]
 
 [params]
 dateformat = "January 2, 2006"
@@ -231,9 +226,6 @@ ghrepo_edit = "https://github.com/rackerlabs/support-how-to/edit/master/hugo/con
 ghrepo_new = "https://github.com/rackerlabs/support-how-to/issues/new"
 images = ["/img"]
 
-[params.algolia]
-params = ["type", "product_url", "created_by"]
-vars = ["audit_date", "description", "summary", "permalink", "title", "type", "created_by", "created_date", "last_modified_by", "last_modified_date", "product_url", "product", "relpermalink", "summary", "category"]
 [related]
 includeNewer = true
 threshold = 10
