--- a/netlify.toml
+++ b/netlify.toml
@@ -23,3 +23,8 @@
   [headers.values]
     Cache-Control = "public, s-max-age=604800"
 
+[[redirects]]
+  from = "/how-to/ach-compliance-faq/"
+  to = "/how-to/article-retired/"
+  status = 200
+  force = true # COMMENT: ensure that we always redirect
