--- a/netlify.toml
+++ b/netlify.toml
@@ -22,3 +22,10 @@
   for = "/*.js"
   [headers.values]
     Cache-Control = "public, s-max-age=604800"
+
+[[redirects]]
+  from = "https://docs-support-how-to.netlify.app/how-to/ach-compliance-faq/"
+  to = "https://docs-support-how-to.netlify.app/how-to/article-retired/"
+  status = 200
+  force = true
+  headers = {X-From = "Netlify"}
