--- a/netlify.toml
+++ b/netlify.toml
@@ -30,14 +30,14 @@
   force = true
   headers = {X-From = "Netlify"}
 [[redirects]]
-  from = "https://docs-support-how-to.netlify.app/"
-  to = "https://docs-support-how-to.netlify.app/support/"
+  from = "https://docs-support-how-to.netlify.app/support"
+  to = "https://docs-support-how-to.netlify.app/"
   status = 200
   force = true
   headers = {X-From = "Netlify"}
 [[redirects]]
-  from = "https://docs-support-how-to.netlify.app/how-to/"
-  to = "https://docs-support-how-to.netlify.app/support/how-to/"
+  from = "https://docs-support-how-to.netlify.app/support/how-to/"
+  to = "https://docs-support-how-to.netlify.app/how-to/"
   status = 200
   force = true
   headers = {X-From = "Netlify"}
