--- a/netlify.toml
+++ b/netlify.toml
@@ -24,20 +24,20 @@
     Cache-Control = "public, s-max-age=604800"
 
 [[redirects]]
-  from = "https://docs-support-how-to.netlify.app/how-to/ach-compliance-faq/"
-  to = "https://docs-support-how-to.netlify.app/how-to/article-retired/"
+  from = "https://docs-support-how-to.netlify.app/how-to/ach-compliance-faq"
+  to = "https://docs-support-how-to.netlify.app/how-to/article-retired"
   status = 200
   force = true
   headers = {X-From = "Netlify"}
 [[redirects]]
-  from = "https://docs-support-how-to.netlify.app/support"
-  to = "https://docs-support-how-to.netlify.app/"
+  from = "https://docs-support-how-to.netlify.app/support/*"
+  to = "https://docs-support-how-to.netlify.app/*"
   status = 200
   force = true
   headers = {X-From = "Netlify"}
 [[redirects]]
-  from = "https://docs-support-how-to.netlify.app/support/how-to/"
-  to = "https://docs-support-how-to.netlify.app/how-to/"
+  from = "https://docs-support-how-to.netlify.app/support/how-to/*"
+  to = "https://docs-support-how-to.netlify.app/how-to/*"
   status = 200
   force = true
   headers = {X-From = "Netlify"}
