--- a/config.toml
+++ b/config.toml
@@ -23,34 +23,65 @@ offlineSearchMaxResults = 10
 [permalinks]
     how-to = "/how-to/:filename"
 [markup]
-defaultMarkdownHandler = "blackfriday"
-[markup.blackFriday]
-angledQuotes = false
-hrefTargetBlank = false
-latexDashes = true
-plainIDAnchors = true
-[markup.highlight]
-codeFences = true
-guessSyntax = true
-style = "monokailight"
-[markup.goldmark]
-[markup.goldmark.extensions]
-definitionList = true
-footnote = true
-linkify = true
-strikethrough = true
-table = true
-taskList = true
-typographer = true
-[markup.goldmark.parser]
-attribute = true
-autoHeadingID = true
-autoHeadingIDType = "github"
-[markup.goldmark.renderer]
-hardWraps = false
-unsafe = false
-xhtml = false
-
+    defaultMarkdownHandler = "goldmark"
+    [markup.asciidocExt]
+        backend = "html5"
+        docType = "article"
+        extensions = []
+        failureLevel = "fatal"
+        noHeaderOrFooter = true
+        safeMode = "unsafe"
+        sectionNumbers = false
+        trace = false
+        verbose = true
+        workingFolderCurrent = false
+    [markup.asciidocExt.attributes]
+    [markup.blackFriday]
+        angledQuotes = false
+        hrefTargetBlank = false
+        latexDashes = true
+        plainIDAnchors = true
+        footnoteAnchorPrefix = ""
+        footnoteReturnLinkContents = ""
+        fractions = true
+        nofollowLinks = false
+        noreferrerLinks = false
+        skipHTML = false
+        smartDashes = true
+        smartypants = true
+        smartypantsQuotesNBSP = false
+        taskLists = true
+    [markup.highlight]
+        codeFences = true
+        guessSyntax = true
+        hl_Lines = ""
+        lineNoStart = 1
+        lineNos = false
+        lineNumbersInTable = true
+        noClasses = true
+        style = "monokai"
+        tabWidth = 4
+    [markup.goldmark]
+        [markup.goldmark.extensions]
+            definitionList = true
+            footnote = true
+            linkify = true
+            strikethrough = true
+            table = true
+            taskList = true
+            typographer = true
+        [markup.goldmark.parser]
+            attribute = true
+            autoHeadingID = true
+            autoHeadingIDType = "github"
+        [markup.goldmark.renderer]
+            hardWraps = false
+            unsafe = false
+            xhtml = false
+        [markup.tableOfContents]
+            endLevel = 3
+            ordered = false
+            startLevel = 2
 [[menu.docs]]
     name = "Welcome"
     weight = 1
