--- a/netlify.toml
+++ b/netlify.toml
@@ -29,7 +29,7 @@ package = "netlify-plugin-checklinks"
   # An array of glob patterns for pages on your site
   # Recursive traversal will start from these
   entryPoints = [
-    "*.html",
+    "/support/how-to/*.html",
   ]
     # Recurse through all the links and asset references on your page, starting
   # at the entrypoints
