--- a/netlify.toml
+++ b/netlify.toml
@@ -29,7 +29,7 @@ package = "netlify-plugin-checklinks"
   # An array of glob patterns for pages on your site
   # Recursive traversal will start from these
   entryPoints = [
-    "/",
+    "*.html",
   ]
     # Recurse through all the links and asset references on your page, starting
   # at the entrypoints
@@ -42,11 +42,11 @@ package = "netlify-plugin-checklinks"
   # You can mark some check as skipped, which will block checklinks
   # from ever attempting to execute them.
   # skipPatterns is an array of strings you can match against failing reports
-  skipPatterns = ["/blog", "/docs", "/docs/*"]
+  skipPatterns = ["public/blog", "public/docs", "public/docs/*"]
 
   # You can mark some check as todo, which will execute the check, but allow failures.
   # todoPatterns is an array of strings you can match against failing reports
-  todoPatterns = ["/support/*"]
+  todoPatterns = ["public/support/*"]
 
   # Report on all broken links to external pages.
   # Enabling this will make your tests more brittle, since you can't control
