URL Checker plugin

--- a/netlify.toml
+++ b/netlify.toml
@@ -23,15 +23,15 @@
   [headers.values]
     Cache-Control = "public, s-max-age=604800"
 
-[[plugins]]
-  package = "netlify-plugin-checklinks"
-  [plugins.inputs]
-  entryPoints = [
-    "*.html",
-  ]
-  recursive = false
-  pretty = true
-  skipPatterns = ["public/blog", "public/docs", "public/docs/*"]
-  todoPatterns = ["public/support/","public/support/*", "public/support/how-to/", "public-support/how-to"]
-  checkExternal = false
-  followSourceMaps = false
+# [[plugins]]
+#   package = "netlify-plugin-checklinks"
+#   [plugins.inputs]
+#   entryPoints = [
+#     "*.html",
+#   ]
+#   recursive = false
+#   pretty = true
+#   skipPatterns = ["public/blog", "public/docs", "public/docs/*"]
+#   todoPatterns = ["public/support/","public/support/*", "public/support/how-to/", "public-support/how-to"]
+#   checkExternal = false
+#   followSourceMaps = false
