Netlify Dev Config

--- a/netlify.toml
+++ b/netlify.toml
@@ -9,6 +9,9 @@
   command = "make build-preview"
   publish = "public"
 
+[dev]
+  command = "make install && make serve"
+  target =  8080
 
 [[headers]]
   for = "/img/*"
