--- a/netlify.toml
+++ b/netlify.toml
@@ -6,7 +6,9 @@
   publish = "public"
 
 [dev]
+  framework = "#custom"
   command = "make serve"
+  targetPort = 8888
   port = 8888
   publish = "public"
   autoLaunch = true
