--- a/config.toml
+++ b/config.toml
@@ -91,12 +91,12 @@ defaultMarkdownHandler = "goldmark"
 [[menu.footer]]
     name = "Support Network Home"
     parent = "Support Network"
-    url = "/"
+    url = "/support/"
     weight = 1
 [[menu.footer]]
     name = "Rackspace How-To"
     parent = "Support Network"
-    url = "/how-to/"
+    url = "/support/how-to/"
     weight = 2
 [[menu.footer]]
     name = "API Documentation"
@@ -188,12 +188,12 @@ defaultMarkdownHandler = "goldmark"
 [[menu.main]]
     identifier = "support_home"
     name = "Support Home"
-    url = "/"
+    url = "/support/"
     weight = 1
 [[menu.main]]
     identifier = "how_to"
     name = "How-To"
-    url = "/how-to/"
+    url = "/support/how-to/"
     weight = 2
 [[menu.main]]
     identifier = "developer_documentation"
