--- a/config.toml
+++ b/config.toml
@@ -226,14 +226,20 @@ defaultMarkdownHandler = "goldmark"
     weight = 6
 
 
+[outputs]
+home = ["HTML", "RSS", "Redirects", "Algolia"]
+
 [outputFormats.Redirects]
 baseName = "redirects"
 isPlainText = true
 mediatype = "application/json"
 notAlternative = true
 
-[outputs]
-home = ["HTML", "RSS", "Redirects"]
+[outputFormats.Algolia]
+baseName = "algolia"
+isPlainText = true
+mediaType = "application/json"
+notAlternative = true
 
 [params]
 dateformat = "January 2, 2006"
@@ -242,6 +248,10 @@ ghrepo = "https://github.com/rackerlabs/support-how-to"
 ghrepo_edit = "https://github.com/rackerlabs/support-how-to/edit/master/hugo/content/"
 ghrepo_new = "https://github.com/rackerlabs/support-how-to/issues/new"
 images = ["/img"]
+
+[params.algolia]
+  vars = ["title", "summary", "date", "publishdate", "expirydate", "permalink"]
+  params = ["categories", "tags"]
 
 [related]
 includeNewer = true
