--- a/netlify.toml
+++ b/netlify.toml
@@ -39,6 +39,8 @@
 #   todoPatterns = ["public/support/","public/support/*", "public/support/how-to/", "public-support/how-to"]
 #   checkExternal = false
 #   followSourceMaps = false
+[[plugins]]
+  package = "netlify-plugin-algolia-export"
 
 [[plugins]]
   package = "netlify-plugin-hugo-cache-resources"
