--- a/netlify.toml
+++ b/netlify.toml
@@ -27,8 +27,8 @@
   [headers.values]
     Cache-Control = "public, s-max-age=604800"
 
-[[plugins]]
-  package = "netlify-plugin-algolia-export"
+# [[plugins]]
+#   package = "netlify-plugin-algolia-export"
 
 [[plugins]]
   package = "netlify-plugin-hugo-cache-resources"
