--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = ""
+baseurl = "/"
 theme = "support-developer-hugo-theme"
 copyright = ""
 defaultContentLanguage = "en-us"
@@ -16,7 +16,7 @@ smartDashes = true
 title = "Rackspace Developer Center"
 canonifyURLs = true
 [permalinks]
-    how-to = "/support/how-to/:filename"
+    how-to = "/how-to/:filename"
 [markup]
 defaultMarkdownHandler = "goldmark"
 [markup.asciidocExt]
