--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,9 @@
 [build.environment]
   HUGO_VERSION = "0.75.1"
+  ALGOLIA_APP_ID = "ALGOLIA_APP_ID"
+  ALGOLIA_SEARCH_KEY = "ALGOLIA_SEARCH_KEY"
+
+
 
 [build]
   command = "make build"
