--- a/netlify.toml
+++ b/netlify.toml
@@ -34,3 +34,7 @@
   package = "netlify-plugin-hugo-cache-resources"
 	[plugins.inputs]
 	debug = true
+[[plugins]]
+  package = "netlify-plugin-algolia-export"
+  [plugin.inputs]
+     exclude = ['/about-volume-types']
