--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "atomic-algolia": "^0.3.19",
   "bootstrap": "^4.5.2",
   "content-loaded": "^1.2.1",
+  "dotenv": "^8.2.0",
   "highlight.js": "^10.2.0",
   "instantsearch.js": "^4.8.1",
   "smoothscroll-polyfill": "^0.4.4"
