--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "start": "run-p start:*",
   "start:hugo": "make serve",
   "start:webpack": "webpack --mode=development --watch",
-  "build": "make install && rm -rf public && rm -rf static/assets && run-s build:webpack build:hugo",
+  "build": "make install && rm -rf static/assets && run-s build:webpack build:hugo",
   "build:hugo": "make build",
   "build:webpack": "webpack --mode=production"
  },
