--- a/config.toml
+++ b/config.toml
@@ -16,6 +16,7 @@ smartDashes = true
 title = "Rackspace Developer Center"
 canonifyURLs = true
 enableGitInfo = true
+ignoreFiles = "content/how-to/retired-articles/"
 [permalinks]
     how-to = "/how-to/:filename"
 [markup]
