--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ defaultContentLanguage = "en-us"
 destination = "public"
 enableEmoji = true
 enableRobotsTXT = true
-languageCode = "en"
+languageCode = "en-us"
 metaDataFormat = "yaml"
 paginate = 10
 pluralizeListTitles = false
@@ -14,20 +14,11 @@ disablePathToLower = true
 uglyURLs = false
 smartDashes = true
 title = "Rackspace Developer Center"
-# Google Custom Search Engine ID
-# gcs_engine_id = "006650721361932583448:0tpp1tnttba"
-# Enable offline search with Lunr.js
-offlineSearch = true
-offlineSearchSummaryLength = 70
-offlineSearchMaxResults = 10
 canonifyURLs = true
 enableGitInfo = true
+ignoreFiles = "content/how-to/retired-articles/"
 [permalinks]
     how-to = "/how-to/:filename"
-[frontmatter]
-    date = ["date", "last_modified_date", "created_date"]
-    lastmod = [":git", "lastmod", "date", "last_modified_date"]
-    publishDate = ["created_date", "date"]
 [markup]
 defaultMarkdownHandler = "goldmark"
 [markup.asciidocExt]
@@ -89,19 +80,15 @@ defaultMarkdownHandler = "goldmark"
     ordered = false
     startLevel = 2
 
-[[menu.docs]]
-    name = "Welcome"
-    weight = 1
-
 [[menu.footer]]
     name = "Support Network Home"
     parent = "Support Network"
-    url = "/support/"
+    url = "/support"
     weight = 1
 [[menu.footer]]
     name = "Rackspace How-To"
     parent = "Support Network"
-    url = "/support/how-to/"
+    url = "/support/how-to"
     weight = 2
 [[menu.footer]]
     name = "API Documentation"
@@ -162,7 +149,7 @@ defaultMarkdownHandler = "goldmark"
 [[menu.footer]]
     name = "Technical Blog"
     parent = "Blogs"
-    url = "https://docs.rackspace.com/blog"
+    url = "https://docs.rackspace.com/blog/"
     weight = 14
 [[menu.footer]]
     name = "Solve: Thought Leadership"
@@ -193,12 +180,12 @@ defaultMarkdownHandler = "goldmark"
 [[menu.main]]
     identifier = "support_home"
     name = "Support Home"
-    url = "/support/"
+    url = "/support"
     weight = 1
 [[menu.main]]
     identifier = "how_to"
     name = "How-To"
-    url = "/support/how-to/"
+    url = "/support/how-to"
     weight = 2
 [[menu.main]]
     identifier = "developer_documentation"
@@ -214,7 +201,7 @@ defaultMarkdownHandler = "goldmark"
     [[menu.main]]
         identifier = "technical-blog"
         name ="Technical Blog"
-        url ="https://docs.rackspace.com/blog"
+        url ="https://docs.rackspace.com/blog/"
         weight = 1
         parent = "blogs"
     [[menu.main]]
@@ -241,14 +228,14 @@ defaultMarkdownHandler = "goldmark"
     weight = 6
 
 
-[outputFormats.Redirects]
-baseName = "redirects"
-isPlainText = true
-mediatype = "application/json"
-notAlternative = true
-
 [outputs]
-home = ["HTML", "RSS", "Redirects"]
+home = ["HTML", "RSS", "Algolia"]
+
+[outputFormats.Algolia]
+baseName = "algolia"
+isPlainText = true
+mediaType = "application/json"
+notAlternative = true
 
 [params]
 dateformat = "January 2, 2006"
@@ -257,6 +244,10 @@ ghrepo = "https://github.com/rackerlabs/support-how-to"
 ghrepo_edit = "https://github.com/rackerlabs/support-how-to/edit/master/hugo/content/"
 ghrepo_new = "https://github.com/rackerlabs/support-how-to/issues/new"
 images = ["/img"]
+
+[params.algolia]
+  vars = ["title", "summary", "date", "publishdate", "expirydate", "permalink", "description", "created_by", "created_date", "last_modified_by", "last_modified_date"]
+  params = ["categories", "tags"]
 
 [related]
 includeNewer = true
