--- a/config.toml
+++ b/config.toml
@@ -229,13 +229,8 @@ defaultMarkdownHandler = "goldmark"
 
 
 [outputs]
-home = ["HTML", "RSS", "Algolia"]
+home = ["HTML", "RSS"]
 
-[outputFormats.Algolia]
-baseName = "algolia"
-isPlainText = true
-mediaType = "application/json"
-notAlternative = true
 
 [params]
 dateformat = "January 2, 2006"
@@ -245,9 +240,6 @@ ghrepo_edit = "https://github.com/rackerlabs/support-how-to/edit/master/hugo/con
 ghrepo_new = "https://github.com/rackerlabs/support-how-to/issues/new"
 images = ["/img"]
 
-[params.algolia]
-  vars = ["title", "summary", "date", "publishdate", "expirydate", "permalink", "description", "created_by", "created_date", "last_modified_by", "last_modified_date"]
-  params = ["categories", "tags"]
 
 [related]
 includeNewer = true
