--- a/netlify.toml
+++ b/netlify.toml
@@ -63,6 +63,8 @@
   # skipPatterns is an array of strings you can match against failing reports
   skipPatterns = [
     "/public/support/how-to/*",
+    "public/support",
+    "public/support/how-to"
   ]
 
   # You can mark some check as todo, which will execute the check, but allow failures.
